--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "start": "webpack-dev-server --inline --hot",
     "build": "webpack -p"
   },
-  "devDependencies": {
-    "html-webpack-plugin": "^2.28.0",
-    "ts-loader": "^2.1.0",
-    "tslint": "^5.3.2",
-    "typescript": "^2.3.3",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
-  },
   "dependencies": {
+    "howler": "^2.0.4",
     "pixi.js": "^4.5.3"
+  },
+  "devDependencies": {
+    "@types/howler": "^2.0.2",
+    "@types/pixi.js": "^4.5.0",
+    "@types/webpack": "^2.2.16",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.28.0",
+    "ts-loader": "^2.2.0",
+    "tslint": "^5.4.3",
+    "typescript": "^2.4.0",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
