--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "lib": [
       "dom",
       "esnext"
     ],
-    "strict": true
+    "strict": true,
+    "downlevelIteration": true,
+    "noUnusedLocals": true
   },
   "include": [
     "./src/**/*"
