--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,15 +2,9 @@
   "compilerOptions": {
     "target": "es5",
     "module": "es2015",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "strict": true,
     "downlevelIteration": true,
     "noUnusedLocals": true
-  },
-  "include": [
-    "./src/**/*"
-  ]
+  }
 }
