--- a/package.json
+++ b/package.json
@@ -5,26 +5,25 @@
   "author": "just nobody",
   "license": "MIT",
   "scripts": {
-    "start":
-      "webpack-dev-server --config ./webpack/webpack.config.ts --inline --hot --progress --open",
+    "start": "webpack-dev-server --config ./webpack/webpack.config.ts --inline --hot --progress --open",
     "build": "webpack --config ./webpack/webpack.config.ts -p",
     "build-dev": "webpack --config ./webpack/webpack.config.ts"
   },
   "dependencies": {
     "howler": "^2.0.4",
-    "pixi.js": "^4.5.3"
+    "pixi.js": "^4.5.5"
   },
   "devDependencies": {
-    "@types/howler": "^2.0.2",
-    "@types/pixi.js": "^4.5.0",
-    "@types/webpack": "^2.2.16",
+    "@types/howler": "^2.0.3",
+    "@types/pixi.js": "^4.5.3",
+    "@types/webpack": "^3.0.10",
     "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.28.0",
-    "ts-loader": "^2.2.0",
+    "html-webpack-plugin": "^2.30.1",
+    "ts-loader": "^2.3.4",
     "ts-node": "^3.3.0",
-    "tslint": "^5.4.3",
-    "typescript": "^2.4.0",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "tslint": "^5.7.0",
+    "typescript": "^2.5.2",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   }
 }
